winsw for agent connection